[package]
name = "advent2025"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
brownstone = "3.0.0"
debate = "0.9.1"
enum-map = "2.7.3"
gcd = "2.3.0"
gridly = "0.9.1"
gridly_grids = "0.5.0"
itertools = "0.13.0"
joinery = "3.1.0"
lazy_format = "2.0.3"
memchr = "2.7.4"
nom = "7.1.3"
nom-supreme = "0.8.0"
rayon = "1.10.0"
regex = "1.11.1"
thiserror = "2.0.3"

[build-dependencies]
lazy_format = "2.0.3"
nom = "7.1.3"
nom-supreme = "0.8.0"
